# Currency

./: .env.example  README.md  docker-compose.yml  pyproject.toml
src/core/: services.py  settings.py  urls.py
src/currency/: models.py  serializers.py  services.py  urls.py  views.py
src/currency/migrations/: 0001_initial.py  0002_dump_currency_data.py  data.json
